working on fixing the horizontal scrolling
contact.php en diensten.php klaar,
index.php werkt nog niet maar probleem is slideshow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,9 @@
 .header {
     display: flex;
 
-    width: 100vw;
-    height: 15vh;
+    width: 98vw;
+    height: fit-content;
+    min-height: 15vh;
 
     /* border: .2vw solid black; */
     background-color: rgb(24, 18, 63);
@@ -18,17 +19,22 @@
 
 .e {
     display: flex;
-    width: 25vw;
+    width: 40vw;
+}
+
+.header-logo {
+    width: 8.3vw;
+    height: 8.3vw;
 }
 
 .header-text {
     font-weight: bold;
-    font-size: x-large;
-    text-wrap: nowrap;
+    font-size: 1.4em;
+    text-wrap: wrap;
 }
 
 .header-subtext {
-    font-size: smaller;
+    font-size: 0.8em;
 }
 
 .f {
@@ -39,7 +45,7 @@
     padding-bottom: 1.5vh;
 
     width: 30vw;
-    margin-left: 30vw;
+    padding-left: 25vw;
 }
 
 .dropdown {
@@ -156,7 +162,7 @@
 
 .slideshow {
     position: relative;
-    width: 100vw;
+    width: 98vw;
     height: 60vh;
     /* Adjust height as needed */
     overflow: hidden;
@@ -304,73 +310,6 @@
 /* MARK: Diesten pagina 
 */
 
-@media (max-width: 768px) {
-  .introductie {
-    /* padding-top: 2vh; */
-    /* padding-left: 5vh; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .introductie-foto {
-    width: 25vh;
-    height: 25vh;
-
-    border-radius: 20%;
-  }
-
-  .introductie-text {
-    font-size: 1.8em;
-    font-weight: 600;
-
-    color: black;
-
-    text-align: center;
-  }
-
-  .tuin-category {
-    width: 95vw;
-    max-width: 95vw;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    margin-top: 10vh;
-    margin-left: 5vw;
-  }
-
-  .tuin-category:last-of-type {
-    margin-bottom: 10vh;
-  }
-
-  .icon {
-    width: 10vh;
-    height: 10vh;
-  }
-
-  .tuin-teksts {
-    flex-wrap: wrap;
-
-    padding-top: 4vw;
-
-    max-width: 50vw;
-  }
-
-  .tuin-category-text {
-    font-size: 1.8em;
-    font-weight: bold;
-
-    margin-left: 2vw;
-    width: fit-content;
-  }
-
-  .tuin-text {
-    margin-left: 2vw;
-  }
-}
-
 .introductie {
   padding-top: 2vh;
   padding-left: 5vh;
@@ -395,8 +334,8 @@
 }
 
 .tuin-category {
-  width: 95vw;
-  max-width: 95vw;
+  width: 90vw;
+  max-width: 90vw;
   height: fit-content;
   display: flex;
 
@@ -435,6 +374,73 @@
   /* margin-left: 10vw; */
 }
 
+@media (max-width: 768px) {
+    .introductie {
+      /* padding-top: 2vh; */
+      /* padding-left: 5vh; */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .introductie-foto {
+      width: 25vh;
+      height: 25vh;
+  
+      border-radius: 20%;
+    }
+  
+    .introductie-text {
+      font-size: 1.8em;
+      font-weight: 600;
+  
+      color: black;
+  
+      text-align: center;
+    }
+  
+    .tuin-category {
+      width: 95vw;
+      max-width: 95vw;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+      margin-top: 10vh;
+      margin-left: 5vw;
+    }
+  
+    .tuin-category:last-of-type {
+      margin-bottom: 10vh;
+    }
+  
+    .icon {
+      width: 12vh;
+      height: 12vh;
+    }
+  
+    .tuin-teksts {
+      flex-wrap: wrap;
+  
+      padding-top: 4vw;
+  
+      max-width: 50vw;
+    }
+  
+    .tuin-category-text {
+      font-size: 1.8em;
+      font-weight: bold;
+  
+      margin-left: 2vw;
+      width: fit-content;
+    }
+  
+    .tuin-text {
+      margin-left: 2vw;
+    }
+  }
+
 /* MARK: FOOTER 
 */
 
@@ -442,7 +448,7 @@
     margin-bottom: 0vh;
 
     background-color: rgb(24, 18, 63);
-    width: 100vw;
+    width: 98vw;
     height: 35vh;
 
     display: flex;
@@ -500,6 +506,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 header {
   background-color: #f2f2f2;
   padding: 0.5em;
@@ -549,6 +556,7 @@ form textarea,
 form button {
   width: 100%;
 }
+
 .contact-info {
   flex: 1 1 45%;
   max-width: 45%;
